--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="text-content">
           <h2>FBI Finds Action Star Guilty of False Advertising</h2>
           <p>
-            "WASHINGTON DC- Donec luctus sem augue, rutrum posuere 
+            "WASHINGTON DC- Donec luctus sem augue, rutrum posuere
             orci aliquam sed. Nam vitae aliquam lectus. Sed tempor
             tortor est, nec sagittis eros tincidunt sed. Morbi
             venenatis condimentum sem, vitae sollicitudin turpis
@@ -62,7 +62,16 @@
       </div>
     </div>
     <div class="column small">
-
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" alt="cookie" class="cookie">
+      <div class="news-bites">
+        <h3>NEWS BITES</h3>
+          <span class="bite">Cat Emoji Goes Viral</span>
+          <span class="bite">Buy Youtube Views</span>
+          <span class="bite">Home Business Advertising Ideas</span>
+          <span class="bite">Advertising Internet Online</span>
+          <span class="bite">Illustration in Marketing Materials</span>
+          <span class="bite">Finally a Top Secret Way You Can</span>
+      </div>
     </div>
   </div>
 </html>
