--- a/index.html
+++ b/index.html
@@ -41,6 +41,42 @@
         aliquet placerat leo a hendrerit. Nulla non sagittis
         neque. Nullam sit amet fringilla massa." </p>
       </div>
+      <div class="stories">
+        <div class="text-content">
+          <h2>Orca Spends Vacation at Land World Pugit</h2>
+          <p class="narrative">Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit, sed do
+             eiusmod tempor incididunt ut labore et
+             dolore magna aliqua. Ut enim ad minim
+             veniam, quis nostrud exercitation ullamco
+             laboris nisi ut aliquip ex ea commodo
+             consequat. Duis aute irure dolor in
+             reprehenderit in voluptate velit esse cillum
+             dolore eu fugiat nulla pariatur. Excepteur
+             sint occaecat cupidatat non proident, sunt
+             in culpa qui officia deserunt mollit anim
+             id est laborum.</p>
+        </div>
+        <div class="fall-canceled image-content"><span>Earth Spins Backwards for 2017</span></div>
+        <div class="text-content">
+          <h2>Burger for Breakfast: How Early is too Early?</h2>
+          <p class="narrative">Lorem ipsum dolor sit
+            amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim
+            veniam, quis nostrud exercitation ullamco
+            laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse
+            cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non
+            proident, sunt in culpa qui officia
+            deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="pop-culture image-content">
+          <span>Reaserch Shows Cameras Erase Memory</span>
+        </div>
+      </div>
     </div>
     <div class="column medium">
       <div class="story">
@@ -74,4 +110,5 @@
       </div>
     </div>
   </div>
+
 </html>
