--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </body>
   <div class="content">
     <div class="column large">
-      <div class="story-one">
+      <div class="lead-story">
         <div class="image-content">
           <span>Mother of Three Buys Tuna Steak at Phish Concert.
             Leaves, "Feeling Funny."</span>
@@ -42,22 +42,28 @@
         neque. Nullam sit amet fringilla massa." </p>
       </div>
       <div class="stories">
-        <div class="text-content">
-          <h2>Orca Spends Vacation at Land World Pugit</h2>
-          <p class="narrative">Lorem ipsum dolor sit
-            amet, consectetur adipisicing elit, sed do
-             eiusmod tempor incididunt ut labore et
-             dolore magna aliqua. Ut enim ad minim
-             veniam, quis nostrud exercitation ullamco
-             laboris nisi ut aliquip ex ea commodo
-             consequat. Duis aute irure dolor in
-             reprehenderit in voluptate velit esse cillum
-             dolore eu fugiat nulla pariatur. Excepteur
-             sint occaecat cupidatat non proident, sunt
-             in culpa qui officia deserunt mollit anim
-             id est laborum.</p>
+        <div class="story">
+          <div class="text-content">
+            <h2>Orca Spends Vacation at Land World Pugit</h2>
+            <p class="narrative">Lorem ipsum dolor sit
+              amet, consectetur adipisicing elit, sed do
+               eiusmod tempor incididunt ut labore et
+               dolore magna aliqua. Ut enim ad minim
+               veniam, quis nostrud exercitation ullamco
+               laboris nisi ut aliquip ex ea commodo
+               consequat. Duis aute irure dolor in
+               reprehenderit in voluptate velit esse cillum
+               dolore eu fugiat nulla pariatur. Excepteur
+               sint occaecat cupidatat non proident, sunt
+               in culpa qui officia deserunt mollit anim
+               id est laborum.</p>
+          </div>
+
+        <div class="fall-cancelled image-content">
+          <span>Earth Spins Backwards for 2017</span>
         </div>
-        <div class="fall-canceled image-content"><span>Earth Spins Backwards for 2017</span></div>
+        </div>
+        <div class="story">
         <div class="text-content">
           <h2>Burger for Breakfast: How Early is too Early?</h2>
           <p class="narrative">Lorem ipsum dolor sit
@@ -75,6 +81,7 @@
         </div>
         <div class="pop-culture image-content">
           <span>Reaserch Shows Cameras Erase Memory</span>
+        </div>
         </div>
       </div>
     </div>
@@ -96,6 +103,21 @@
           </p>
         </div>
       </div>
+      <div class="cat-ceo image-content">
+        <span>Cats in Control-Is It a Thing?</span>
+      </div>
+      <p class="narrative">Lorem ipsum dolor sit
+        amet, consectetur adipisicing elit, sed
+        do eiusmod tempor incididunt ut labore et
+        dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco
+        laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in
+        reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur.
+        Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia
+        deserunt mollit anim id est laborum.</p>
     </div>
     <div class="column small">
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" alt="cookie" class="cookie">
@@ -110,5 +132,19 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="info">
+      <span class="title">MY TIMES</span>
+      <nav>
+        <span><a href="#">World</a></span>
+        <span><a href="#">U.S></a></span>
+        <span><a href="#">Tech</a></span>
+        <span><a href="#">Science</a></span>
+      </nav>
+    </div>
+    <div class="copyright">
+      © 2016, My Times (A Division of Codecademy bite)
+    </div>
+  </footer>
 
 </html>
