--- a/index.html
+++ b/index.html
@@ -49,14 +49,7 @@
               amet, consectetur adipisicing elit, sed do
                eiusmod tempor incididunt ut labore et
                dolore magna aliqua. Ut enim ad minim
-               veniam, quis nostrud exercitation ullamco
-               laboris nisi ut aliquip ex ea commodo
-               consequat. Duis aute irure dolor in
-               reprehenderit in voluptate velit esse cillum
-               dolore eu fugiat nulla pariatur. Excepteur
-               sint occaecat cupidatat non proident, sunt
-               in culpa qui officia deserunt mollit anim
-               id est laborum.</p>
+               veniam...</p>
           </div>
 
         <div class="fall-cancelled image-content">
@@ -70,14 +63,8 @@
             amet, consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et
             dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur.
-            Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
+            veniam...
+          </p>
         </div>
         <div class="pop-culture image-content">
           <span>Reaserch Shows Cameras Erase Memory</span>
@@ -90,16 +77,11 @@
         <div class="text-content">
           <h2>FBI Finds Action Star Guilty of False Advertising</h2>
           <p>
-            "WASHINGTON DC- Donec luctus sem augue, rutrum posuere
+            WASHINGTON DC- Donec luctus sem augue, rutrum posuere
             orci aliquam sed. Nam vitae aliquam lectus. Sed tempor
             tortor est, nec sagittis eros tincidunt sed. Morbi
             venenatis condimentum sem, vitae sollicitudin turpis
-            pulvinar eget. Morbi pellentesque consectetur mi id
-            auctor. Phasellus tincidunt orci mauris, placerat
-            pharetra urna fringilla vitae. Morbi eget rutrum urna.
-            Cras condimentum augue ut ante sollicitudin interdum.
-            Pellentesque cursus dolor at tincidunt cursus. Vestibulum
-            blandit aliquam felis..."
+            pulvinar eget...
           </p>
         </div>
       </div>
@@ -109,15 +91,7 @@
       <p class="narrative">Lorem ipsum dolor sit
         amet, consectetur adipisicing elit, sed
         do eiusmod tempor incididunt ut labore et
-        dolore magna aliqua. Ut enim ad minim
-        veniam, quis nostrud exercitation ullamco
-        laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in
-        reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur.
-        Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia
-        deserunt mollit anim id est laborum.</p>
+        dolore magna aliqua...</p>
     </div>
     <div class="column small">
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-news-bite.png" alt="cookie" class="cookie">
